Fix scroll issue on mobile (IPhone)
The scrolling was not working on mobiles, specifically Iphones. Had to
force the overflow to be scroll instead of relying on the auto property.

--- a/vue-src/sass/styles.scss
+++ b/vue-src/sass/styles.scss
@@ -4,12 +4,6 @@
 html, body {
 	height: 100%;
 	width: 100%;
-
-}
-
-body {
-	min-height: 100%;
-	overflow: auto;
 }
 
 a {
